# AIR

./: .gitignore  CMakeLists.txt  README.md
scripts/nexmark/: nexmark-sanity-check-NQ5.sql  nexmark-sanity-check-NQ8.sql  nexmark_slurm_exp.sh  process.py  run-latency-checks.sh  run-sanity-checks.sh
scripts/nexmark/slurm_exp/: import-data.sh  launcher_template.sh  merge-files.sh  process.py  window_template.hpp
src/dataflow/: BasicVertex.hpp  CountAggregator.hpp
src/main/: main.cpp
src/nexmark_gen/: Auctions.cpp  Auctions.hpp  Cities.hpp  Educations.hpp  Emails.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp  FirstNames.hpp  LastNames.hpp  PODTypes.hpp  Persons.cpp  Persons.hpp  Random.cpp  Random.hpp  States.hpp
src/nexmark_hot_items/: BidFilter.cpp  BidFilter.hpp  EventCollector.cpp  EventCollector.hpp  EventSharder.cpp  EventSharder.hpp  GroupbyAuction.cpp  GroupbyAuction.hpp
src/nexmark_hot_items_fw/: BidFilter.cpp  BidFilter.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp  EventSharder.cpp  EventSharder.hpp  GroupbyAuction.cpp  GroupbyAuction.hpp
src/nexmark_hot_items_ws/: BidFilter.cpp  EventCollector.cpp  EventCollector.hpp  EventSharder.cpp  GroupbyAuction.cpp  GroupbyAuction.hpp
src/nexmark_new_sellers/: AuctionAttributesSelector.cpp  AuctionAttributesSelector.hpp  AuctionsFilter.cpp  AuctionsFilter.hpp  AuctionsManager.cpp  AuctionsManager.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp  PODTypesExtension.hpp  PersonAttributesSelector.cpp  PersonAttributesSelector.hpp  PersonsFilter.cpp  PersonsFilter.hpp  PersonsManager.cpp  PersonsManager.hpp  TumblingWindowJoin.cpp  TumblingWindowJoin.hpp
src/nexmark_new_sellers_fw/: AuctionAttributesSelector.cpp  AuctionAttributesSelector.hpp  AuctionsFilter.cpp  AuctionsFilter.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp  PersonAttributesSelector.cpp  PersonAttributesSelector.hpp  PersonsFilter.cpp  PersonsFilter.hpp  TumblingWindowJoin.cpp  TumblingWindowJoin.hpp  WrapperUnit.hpp
src/nexmark_new_sellers_ws/: EventCollector.cpp  EventCollector.hpp  TumblingWindowJoin.cpp  TumblingWindowJoin.hpp
src/scb/: Aggregator.cpp  Aggregator.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp
src/scb_fw/: Aggregator.cpp  Aggregator.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp
src/scb_ws/: Aggregator.cpp  Aggregator.hpp  EventCollector.cpp  EventCollector.hpp  EventGenerator.cpp  EventGenerator.hpp
src/serialization/: Serialization.cpp  Serialization.hpp
src/usecases/: NQ5.cpp  NQ5.hpp  NQ5FW.cpp  NQ5FW.hpp  NQ5WS.cpp  NQ5WS.hpp  NQ8.cpp  NQ8.hpp  NQ8FW.cpp  NQ8FW.hpp  NQ8WS.cpp  NQ8WS.hpp  SCB.cpp  SCB.hpp  SCBFW.cpp  SCBFW.hpp  SCBWS.cpp  SCBWS.hpp
src/yahoo/: FullAggregator.cpp.orig  PartialAggregator.cpp.orig
